--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     <h3>MDN Web Docs</h3>
                     <p>Documentation pour les développeurs web.</p>
                     <div class="favicon" aria-hidden="true">
-                        <img src="https://download.logo.wine/logo/MDN_Web_Docs/MDN_Web_Docs-Logo.wine.png" alt="MDN Web Docs" style="width:72px;height:auto">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQwd68ziRiidnX_LO0dbXnx0eGf7wavbN4K2w&s" alt="MDN Web Docs" style="width:72px;height:auto">
                     </div>
                     <a class="visit" href="https://developer.mozilla.org" target="_blank" rel="noopener noreferrer">Aller sur MDN Web Docs</a>
                 </article>
@@ -231,3 +231,4 @@
     </div>
 </body>
 </html>
+
